# mualani-launcher

./: .gitignore  CMakeLists.txt  README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: i18n.ts
src/app/: App.css  App.tsx  index.css  main.tsx
src/components/: icon.tsx  settings.tsx  sidebar.tsx  titlebar.tsx
src/components/games/: genshin.tsx  layout.tsx
src/components/games/widgets/: genshinnewswidget.tsx  panelbutton.tsx
src/components/home/: gamelibrary.tsx
src/components/layouts/dialog/: gameresource.tsx
src/components/layouts/settings/: general.tsx  page.tsx
src/core/: hoyoapi.tsx
src/data/: game.ts
src/locales/: cn-ZH.json  en-US.json  id-ID.json  ja-JP.json  ru-RU.json  th-TH.json
src/renderer/chromium/: main.cpp  mainwindow.cpp  mainwindow.hpp  simplehandler.hpp
src/renderer/electron/: main.js  preload.js
test/js/: test.js
test/python/: test.ipynb
test/ziptest/: init
